--- a/pom.xml
+++ b/pom.xml
@@ -152,10 +152,14 @@
             </plugins>
 	</build>
 	<distributionManagement>
-        <repository>
-            <id>releases</id>
-            <url>http://35.190.134.67:8081/nexus/content/repositories/releases/</url>
-        </repository>
-    	</distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+  </distributionManagement>
 </project>
 
